<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/event_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/event_title"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/event_description"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/event_teamA"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toStartOf="@+id/home_result"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />

        <TextView
            android:id="@+id/home_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/result_teamA"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toStartOf="@+id/space_"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_team"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />

        <TextView
            android:id="@+id/space_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="-"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/visit_result"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_result"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />

        <TextView
            android:id="@+id/visit_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/result_teamB"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@+id/visit_team"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/space_"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />

        <TextView
            android:id="@+id/visit_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/event_teamB"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/visit_result"
            app:layout_constraintTop_toBottomOf="@+id/event_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
