<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.single_team_details.SingleTeam">

        <!-- Scrollable view here -->


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimaryDark"
                app:expandedTitleTextAppearance="@android:color/transparent"
                android:fitsSystemWindows="true"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/img_club"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarDetails"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txt_error"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/connection"
                        android:visibility="gone" />


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/team_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/teamName"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:paddingStart="4dp" />

                            <TextView
                                android:id="@+id/team_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:justificationMode="inter_word"
                                android:text="@string/teamDescription"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/team_foundation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/teamFoundation"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:paddingStart="4dp" />

                                <TextView
                                    android:id="@+id/team_foundation_year"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/teamFoundationYear"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/img_badge"
                                    android:layout_width="0dip"
                                    android:layout_height="150dp"
                                    android:layout_weight=".5"
                                     />

                                <ImageView
                                    android:id="@+id/img_jersey"
                                    android:layout_width="0dip"
                                    android:layout_height="150dp"
                                    android:layout_weight=".5"
                                    />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/team_events"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/teamEvents"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="60dp" />


                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

